# Onion-V3-Generator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  RUST_IMPLEMENTATION.md  requirements.txt
benches/: generation_benchmark.rs
onion_generator/: __main__.py
scripts/: benchmark.sh
src/: crypto.rs  lib.rs  main.rs  onion.rs  worker.rs
